<?xml version="1.0"?>
<package format="2">
  <name>camera_lane_segmentation</name>
  <version>0.0.0</version>
  <description>The camera_lane_segmentation package</description>

  <maintainer email="highsky@todo.todo">highsky</maintainer>
  <license>TODO</license>

  <!-- build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build & export & exec 의존성 -->
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <!-- 기타 툴에서 필요 시 추가 정보 -->
  </export>
</package>
